--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,15 @@
             "type": "java",
             "name": "CodeLens (Launch) - RulloSolver",
             "request": "launch",
-            "mainClass": "rullosolver.RulloSolver"
+            "mainClass": "rullosolver.RulloSolver",
+            "projectName": "RulloSolver"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - App",
+            "request": "launch",
+            "mainClass": "rullosolver.App",
+            "projectName": "RulloSolver"
         }
     ]
 }
