--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,13 @@
     <dependency>
       <groupId>net.sourceforge.tess4j</groupId>
       <artifactId>tess4j</artifactId>
-      <version>3.4.1</version>
+      <version>5.0.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.github.jai-imageio/jai-imageio-core -->
     <dependency>
       <groupId>com.github.jai-imageio</groupId>
       <artifactId>jai-imageio-core</artifactId>
-      <version>1.3.1</version>
+      
     </dependency>
 
   </dependencies>
@@ -86,4 +86,15 @@
       </plugins>
     </pluginManagement>
   </build>
+
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.github.jai-imageio</groupId>
+        <artifactId>jai-imageio-core</artifactId>
+        <version>1.4.0</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project>
